--- a/index.html
+++ b/index.html
@@ -1002,8 +1002,11 @@
         
         <!-- Slide 9: Agradecimento -->
         <div class="slide cursor-pointer" onclick="showSlide(0)">
-            <div class="slide-content flex items-center justify-center min-h-screen pt-20 md:pt-28 pb-8 md:pb-12" onclick="event.stopPropagation()">
+            <div class="slide-content flex items-center justify-center min-h-screen pt-[50px] md:pt-28 pb-8 md:pb-12" onclick="event.stopPropagation()">
                 <div class="text-center max-w-2xl mx-auto">
+                    <!-- Espaçador -->
+                    <div class="h-8 md:h-12"></div>
+                    
                     <!-- Logo centralizada -->
                     <div class="mb-8 md:mb-12">
                         <img src="./7bn9o3w2w8.png" alt="Nossa Logo" class="h-20 md:h-32 mx-auto opacity-90">
